# TinyLeakCheck

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: leaks.cpp  stack_trace.cpp  threads.cpp
tinyleakcheck/: tiniestleakcheck.hpp  tinyleakcheck.cpp  tinyleakcheck.hpp
